chore: upgrade to Maven 4 and update all dependencies
- Migrate to Maven 4.0.0-rc-4 with model version 4.1.0
- Update maven-compiler-plugin to 4.0.0-beta-3
- Update maven-source-plugin to 4.0.0-beta-1
- Update Checkstyle to 12.3.0
- Update PMD to 7.19.0
- Update jackson-databind to 2.20.1
- Update junit-jupiter to 6.1.0-M1
- Update assertj-core to 4.0.0-M1
- Fix Java 25 Foreign Function & Memory API compatibility issues
- Enhance task update to actively update all Java dependencies and plugins
- Update Rust, Python, TypeScript, Ruby dependencies via task update